--- a/index.html
+++ b/index.html
@@ -18,28 +18,28 @@
   <div class="content-menu">
     <ul>
       <li>
-        <a href="">ホーム</a>
+        <a id="a1" href="">ホーム</a>
       </li>
       <li>
-        <a href="">ニュース</a>
+        <a id="a2" href="">ニュース</a>
       </li>
       <li>
-        <a href="">スケジュール</a>
+        <a id="a3" href="">スケジュール</a>
       </li>
       <li>
-        <a href="">クラブ紹介</a>
+        <a id="a4" href="">クラブ紹介</a>
       </li>
       <li>
-        <a href="">メンバー</a>
+        <a id="a5" href="">メンバー</a>
       </li>
       <li>
-        <a href="">ギャラリー</a>
+        <a id="a6" href="">ギャラリー</a>
       </li>
       <li>
-        <a href="">パートナー</a>
+        <a id="a7" href="">パートナー</a>
       </li>
       <li>
-        <a href="">お問い合わせ</a>
+        <a id="a8" href="">お問い合わせ</a>
       </li>
     </ul>
   </div>
@@ -47,22 +47,22 @@
   <div class="sns-icon">
     <ul>
       <li>
-        <a href="">
+        <a href="https://www.youtube.com/channel/UCR-dZ_2aMyS2qW8Ry8hDk0w" target="_blank">
           <img src="youtube-icon.webp" alt="">
         </a>
       </li>
       <li>
-        <a href="">
+        <a href="https://www.instagram.com/suita_lyonne_fc/" target="_blank">
           <img src="instagram-icon.png" alt="">
         </a>
       </li>
       <li>
-        <a href="">
+        <a href="https://www.facebook.com/SUITA.LYONNE.FC/" target="_blank">
           <img src="facebook-icon.png" alt="">
         </a>
       </li>
       <li>
-        <a href="">
+        <a href="https://x.com/SUITA_LYONNE_FC?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor" target="_blank">
           <img src="logo-white.png" alt="">
         </a>
       </li>
@@ -180,13 +180,13 @@
 
 
 
-
+<!-- 
 <section class="sns-section">
   <h1>SNS</h1>
   <h2>Instagram</h2>
 
   <div class="embedsocial-hashtag" data-ref="bec983cc99324b3cdd1bfb04c988165cdf5e131f"></div> <script> (function(d, s, id) { var js; if (d.getElementById(id)) {return;} js = d.createElement(s); js.id = id; js.src = "https://embedsocial.com/cdn/ht.js"; d.getElementsByTagName("head")[0].appendChild(js); }(document, "script", "EmbedSocialHashtagScript")); </script>
-</section>
+</section> -->
 
 </main>
 
@@ -198,28 +198,28 @@
       <ul>
         <li>
           <a href="">
-            <img src="suita_w.png" alt="" class="lyone-img">
+            <img src="suita_w.png" alt="" class="lyone-img" target="_blank">
           </a>
         </li>
 
         <li>
-          <a href="">
+          <a href="https://www.youtube.com/channel/UCR-dZ_2aMyS2qW8Ry8hDk0w" target="_blank">
             <img src="youtube-icon.webp" alt="">
           </a>
         </li>
         <li>
-          <a href="">
+          <a href="https://www.instagram.com/suita_lyonne_fc/" target="_blank">
             <img src="instagram-icon.png" alt="">
           </a>
         </li>
         
         <li>
-          <a href="">
+          <a href="https://www.facebook.com/SUITA.LYONNE.FC/" target="_blank">
             <img src="facebook-icon.png" alt="">
           </a>
         </li>
         <li>
-          <a href="">
+          <a href="https://x.com/SUITA_LYONNE_FC?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor" target="_blank">
             <img src="logo-white.png" alt="">
           </a>
         </li>
@@ -229,28 +229,28 @@
     <div class="footer-menu">
       <ul>
         <li>
-          <a href="">ホーム</a>
+          <a id="a9" href="">ホーム</a>
         </li>
         <li>
-          <a href="">ニュース</a>
+          <a id="a10" href="">ニュース</a>
         </li>
         <li>
-          <a href="">スケジュール</a>
+          <a id="a11" href="">スケジュール</a>
         </li>
         <li>
-          <a href="">クラブ紹介</a>
+          <a id="a12" href="">クラブ紹介</a>
         </li>
         <li>
-          <a href="">メンバー</a>
+          <a id="a13" href="">メンバー</a>
         </li>
         <li>
-          <a href="">ギャラリー</a>
+          <a id="a14" href="">ギャラリー</a>
         </li>
         <li>
-          <a href="">パートナー</a>
+          <a id="a15" href="">パートナー</a>
         </li>
         <li>
-          <a href="">お問い合わせ</a>
+          <a id="a16" href="">お問い合わせ</a>
         </li>
       </ul>
     </div>
